[gd_scene load_steps=16 format=3 uid="uid://c2ehwm7qwluu"]

[ext_resource type="Script" path="res://scripts/enemy_bat_weak.gd" id="1_pavwe"]
[ext_resource type="Texture2D" uid="uid://xuw2f1orrx54" path="res://Textures/Enemy/bat/bat.32x32-frames.png" id="2_ncyr7"]
[ext_resource type="PackedScene" uid="uid://42qup1p37ood" path="res://scenes/hurt_box.tscn" id="4_xlmin"]
[ext_resource type="PackedScene" uid="uid://b5o0hduemvf04" path="res://scenes/hit_box.tscn" id="5_e6e3y"]
[ext_resource type="AudioStream" uid="uid://dtm86qrrrxrj6" path="res://Audio/sfx/bat_weak_death.wav" id="5_ulsue"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5hnqi"]
atlas = ExtResource("2_ncyr7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyd2o"]
atlas = ExtResource("2_ncyr7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42chw"]
atlas = ExtResource("2_ncyr7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w535"]
atlas = ExtResource("2_ncyr7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gixj0"]
atlas = ExtResource("2_ncyr7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj5sc"]
atlas = ExtResource("2_ncyr7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kk5g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hnqi")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyd2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42chw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w535")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gixj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj5sc")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s3whu"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_va5u1"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17s6n"]
radius = 4.0
height = 14.0

[node name="enemy_bat_weak" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_pavwe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kk5g6")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s3whu")

[node name="HurtBox" parent="." instance=ExtResource("4_xlmin")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_va5u1")

[node name="HitBox" parent="." instance=ExtResource("5_e6e3y")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_17s6n")

[node name="bat_weak_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ulsue")
volume_db = -12.0
bus = &"Sfx"

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
